Fixed issue on mobile permanent blue buttons

--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
@@ -55,7 +46,6 @@ button:hover {
 button:active {
   box-shadow: 0 0 0 2px #f6b2b2;
 }
-
 
 @media (prefers-color-scheme: light) {
   :root {
